--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<li>lectus in rutrum</li>
 		</ul>
 		
-	<p><a href="Lillikissa1.html">Lisää Lillin luonteesta</a></p>
+	<p><a href="lillikissa1.html">Lisää Lillin luonteesta</a></p>
 
 		<h2>Lillin tuntomerkit</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
