--- a/lillikissa1.html
+++ b/lillikissa1.html
@@ -12,10 +12,11 @@
 	</head>
 
 	<body>
+		
+	<h3><a href="index.html">Takaisin etusivulle</a></h3>
+		
 	    <h1>Lillin luonne</h1>
-		
-		
-		
+			
 		<h2>Tässä hieman lisää Lillin luonteesta</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 	Vestibulum nunc est, scelerisque cursus nulla quis, luctus fermentum purus. 
