--- a/lillikissa2.html
+++ b/lillikissa2.html
@@ -12,11 +12,9 @@
 
 	<body>
 	
-	
+	<h3><a href="index.html">Takaisin etusivulle</a></h3>
 	
 	    <h1>Tuntomerkit</h1>
-		
-		
 		
 		<h2>Lisää tuntomerkeistä</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
