--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 </div>
 	
-	
+<header>	
 	    <h1>Kissani Lilli</h1>
 		
 		
@@ -44,6 +44,8 @@
 	<p>Nunc ac lobortis ligula. Curabitur quis quam mollis, sagittis metus eu, dictum mi. 
 	Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos:</p>
 
+</header>
+	
 		<ul>
 		<li>Interdum et malesuada</li>
 		<li>Ac ante ipsum</li>
