--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
 		
 	<p><a href="lillikissa1.html">Lisää Lillin luonteesta</a></p>
 
+<main>
+
 		<h2>Lillin tuntomerkit</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
 	Donec purus mi, elementum ac nisi non, porta facilisis sem. 
@@ -105,7 +107,7 @@
 	
 	<p><a href="lillikissa3.html">Lillin lempiruoat</a></p>
 	
-
+</main>
 	</body>
 
 </html>
