--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
 	trices sagittis dignissim. Proin at mi in dui faucibus vehicula. Phasellus lorem nisl.</p>
 	
 	<p><a href="lillikissa2.html">Lisää tuntomerkeistä</a></p>
+
+</main>
+		
+<aside>
 	
 		<h2>Lisää Lillistä</h2>
 	<p>Vestibulum leo risus, dapibus sit amet nunc sed, consectetur facilisis diam. 
@@ -82,12 +86,17 @@
 	Cras id dictum nunc. Proin eu dui sit amet justo euismod interdum eu et libero. 
 	Curabitur euismod tempor tincidunt. Maecenas eros ex, venenatis sed diam vel, placerat pretium est. 
 	Morbi quam risus, molestie.</p>
+
+</aside>
 	
 	
 	 <div class="laatikko">
-	
+		 
+	<figure>
 	<img src="lillilaatikossa.jpg"  style="width:200px; height:200px; float: right;">
-	
+	</figure>
+		 
+	<section>	 
 	<p>Vivamus cursus lorem a ullamcorper tincidunt. 
 	Interdum et malesuada fames ac ante ipsum primis in faucibus.  
 	In a tempor diam, eu laoreet nunc. Aenean sit amet pellentesque tellus. 
@@ -102,12 +111,14 @@
 	 
 	
 	</div>
-	
+
+	</section>
+		
 	</p>
 	
 	<p><a href="lillikissa3.html">Lillin lempiruoat</a></p>
 	
-</main>
+
 	</body>
 
 </html>
