--- a/index.html
+++ b/index.html
@@ -117,8 +117,18 @@
 	</p>
 	
 	<p><a href="lillikissa3.html">Lillin lempiruoat</a></p>
-	
 
+<p>
+	Syitä, miksi semanttisia elementtejä kannattaa käytää:
+</p>
+		<ul>
+			<li>Semanttiset elementit, kuten <header>, <nav>, ja <footer>, tekevät koodista helpommin luettavaa ja ymmärrettävää.
+
+</li>
+		<li>Selkeä sivurakenne parantaa hakukoneiden kykyä ymmärtää sivuston sisältöä, mikä voi vaikuttaa positiivisesti hakutulosten sijoitukseen.</li>	
+		</ul>
+	
+<li>Semanttiset elementit parantavat sivuston saavutettavuutta, auttaen erityisesti näytönlukijoiden ja muiden apuvälineiden käyttäjiä ymmärtämään sivun sisältöä.</li>
 	</body>
 
 </html>
