--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 	Syitä, miksi semanttisia elementtejä kannattaa käytää:
 </p>
 		<ul>
-			<li>Semanttiset elementit, kuten <header>, <nav>, ja <footer>, tekevät koodista helpommin luettavaa ja ymmärrettävää.
+			<li>Semanttiset elementit, kuten header, nav, ja footer, tekevät koodista helpommin luettavaa ja ymmärrettävää.
 
 </li>
 		<li>Selkeä sivurakenne parantaa hakukoneiden kykyä ymmärtää sivuston sisältöä, mikä voi vaikuttaa positiivisesti hakutulosten sijoitukseen.</li>	
